step 4 with yall

--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -2,7 +2,7 @@
   .container
     .goal__wrapper
       .goal__image
-        img(src=require("../../../images/laptop.png"), alt="why")
+        img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/laptop.png"), alt="why")  
       .goal__box
         .goal__content
           p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
