step 5 every image

--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -2,7 +2,7 @@
   .container
     p.discount__title.title Atenção!!!
     .discount__image 
-      img(src=require("../../../images/fire.png"), alt="sale")
+      img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
       p.timer__text ATÉ 31 DE MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
       p.timer__time 21:13:33
