--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -16,6 +16,6 @@
           .offer__description 
             p Fechando sua contratação de até o dia 31 de maio, o cadastro de sua empresa no Google será realizado gratuitamente !
       .offers__image
-        img(src=require("../../../images/money.png"), alt="promotion")
+        img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/money.png"), alt="promotion")
 
 
