--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
     meta(property="og:url" content="https://www.eformaliza.com/") 
     meta(property="og:description" content="Criação de web sites profissionais") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
-    script(src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
+    script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
     title e-Formaliza
   body#home(style="visibility: hidden;")
     include components/langToggle/langToggle
