--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -6,7 +6,7 @@
         p Pensou e-Formaliza
       .home__row       
         .home__column
-          iframe.home__video.lazy(width="853" height="480" src="https://www.youtube.com/embed/p5FUE9UvYbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          iframe.home__video.lazy(width="853" height="480" src=require("../../../images/placeholder.jpg")  data-src="https://www.youtube.com/embed/p5FUE9UvYbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
         .home__column
           p.home__title Criamos sites modernos
           ul.home__list
