--- a/src/components/discount/discountEsp.pug
+++ b/src/components/discount/discountEsp.pug
@@ -2,7 +2,7 @@
   .container
     p.discount__title.title Atención!!!
     .discount__image 
-      img(src=require("../../../images/fire.png"), alt="sale")
+      img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
       p.timer__text HASTA EL 31 DE MAYO, OBTÉN UN 10% DE DESCUENTO PROMOCIONAL EN TODOS NUESTROS SERVICIOS
       p.timer__time 21:13:33
