--- a/src/components/offers/offersEng.pug
+++ b/src/components/offers/offersEng.pug
@@ -16,6 +16,6 @@
           .offer__description 
             p Order our services until the 31st of May, your company's registration on Google Business will be realized for free!
       .offers__image
-        img(src=require("../../../images/money.png"), alt="promotion")
+        img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/money.png"), alt="promotion")
 
 
