--- a/src/emailSentEng.pug
+++ b/src/emailSentEng.pug
@@ -4,8 +4,14 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(name="description" content="criação de web sites profissionais" )
-    meta(name="keywords" content="criacão, sites, web, page, pagina, emprendedor, empresa, advogados, guarulhos, osasco, salvador, goiania, joinville, curitiba, fortaleza, campinas, sp, porto alegre, df, brasilia, curitiba, bh, criacao")
+    meta(name="description" content="Professional website creation" )
+    meta(name="keywords" content="creation, sites, web, page, pagina, emprendedor, company, lawers, internet, frontend, layout")
+    meta(property="og:type" content="website")
+    meta(property="og:title" content="e-Formaliza") 
+    meta(property="og:site_name" content="Do you think about WEB sites? Think about e-Formaliza") 
+    meta(property="og:url" content="https://www.eformaliza.com/") 
+    meta(property="og:description" content="Professional website creation") 
+    meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
     title Thank you!
   body
     include components/thanks/thanksEng
