--- a/src/components/discount/discountEng.pug
+++ b/src/components/discount/discountEng.pug
@@ -2,7 +2,7 @@
   .container
     p.discount__title.title Attention!!!
     .discount__image 
-      img(src=require("../../../images/fire.png"), alt="sale")
+      img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
       p.timer__text UNTIL MAY 31, GET 10% PROMO DISCOUNT ON ALL OUR SERVICES    
       p.timer__time 21:13:33
