--- a/src/components/footer/footerEng.pug
+++ b/src/components/footer/footerEng.pug
@@ -17,7 +17,7 @@ footer.footer#contacts
     .footer__box 
       .footer__unit 
         .footer__dove 
-          img(src=require("../../../images/dove.jpg"), alt="peace")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/dove.jpg"), alt="peace")
       .footer__unit 
         .footer__copyright 
           p Created by 
