--- a/src/components/goal/goalEsp.pug
+++ b/src/components/goal/goalEsp.pug
@@ -2,7 +2,7 @@
   .container
     .goal__wrapper
       .goal__image
-        img(src=require("../../../images/laptop.png"), alt="why")
+        img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/laptop.png"), alt="why") 
       .goal__box
         .goal__content
           p.goal__question ¿POR QUÉ ES TAN IMPORTANTE TENER UN SITIO WEB?
