--- a/src/components/offers/offersEsp.pug
+++ b/src/components/offers/offersEsp.pug
@@ -16,6 +16,6 @@
           .offer__description 
             p Contratando hasta el 31 de mayo, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
       .offers__image
-        img(src=require("../../../images/money.png"), alt="promotion")
+        img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/money.png"), alt="promotion")
 
 
