--- a/src/components/portfolio/portfolioEsp.pug
+++ b/src/components/portfolio/portfolioEsp.pug
@@ -1,27 +1,27 @@
 .portfolio
   .container
-    .portfolio__title.title Nuestros proyectos
+    .portfolio__title.title Nuestros Proyectos
     //Slider main container
     .swiper
       //Additional required wrapper
       .swiper-wrapper
         //Slides
         .swiper-slide
-          img(src=require("../../../images/oliveira.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados") 
         .swiper-slide
-          img(src=require("../../../images/margarita.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/margarita.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/honda.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/honda.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/iphone.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/iphone.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/evraz.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/evraz.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/ozone.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/ozone.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/quiz.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/quiz.jpg"), alt="projetos realizados")
         .swiper-slide
-          img(src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
       //pagination
       .swiper-pagination
     //navigation buttons
