--- a/src/eng.pug
+++ b/src/eng.pug
@@ -11,7 +11,8 @@ html(lang="en")
     meta(property="og:site_name" content="Do you think about WEB sites? Think about e-Formaliza") 
     meta(property="og:url" content="https://www.eformaliza.com/") 
     meta(property="og:description" content="Professional website creation") 
-    meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
+    meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
+    script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
     title e-Formaliza
   body#home(style="visibility: hidden;")
     include components/langToggle/langToggleEng
