--- a/src/components/creation/creationEng.pug
+++ b/src/components/creation/creationEng.pug
@@ -19,7 +19,7 @@
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
-        .item__description Websites maintenance
+        .item__description Website maintenance
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/www.svg"), alt="hosting")
@@ -33,7 +33,7 @@
       .creation__about
         ul 
           li Technical support
-          li Features development
+          li Development
           li Consulting
     a.creation__btn.btn(href="#ask") Learn more!
       
