--- a/src/components/home/homeEng.pug
+++ b/src/components/home/homeEng.pug
@@ -13,7 +13,7 @@
           p.home__title We create modern websites
           ul.home__list
             li Exclusive design preparation
-            li Modern websites creation
-            li 03 months warranty
+            li Modern website creation
+            li 3-months warranty
             li Free individual evaluation
           
