--- a/src/components/promotion/promotionEng.pug
+++ b/src/components/promotion/promotionEng.pug
@@ -9,10 +9,10 @@
       .promotion__item.item 
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
-        .item__description Google Business Subscribe 
+        .item__description Google Business Subscription 
     .promotion__box 
       p.promotion__text Managing your Instagram by experienced staff increases your brand popularity and saves your time, redirecting it to managing your business
-      p.promotion__text Subscribing in Google Business increases your company's visibility on the WEB and will be an additional source for visits by new users and customers, through comments and evaluations
+      p.promotion__text Subscription in Google Business increases your company's visibility on the WEB and will be an additional source for visits by new users and customers, through comments and evaluations
     a.promotion__btn.btn(href="#ask") Learn more!  
       
 
