spanish grammatics corrected

--- a/src/components/discount/discountEsp.pug
+++ b/src/components/discount/discountEsp.pug
@@ -8,4 +8,4 @@
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
         p.timer__link ¡Haz clic para el primer paso!   
-        p La competencia ya está en línea y tú?
+        p La competencia ya está en línea, ¿y tú?
