--- a/src/components/offers/offersEsp.pug
+++ b/src/components/offers/offersEsp.pug
@@ -6,7 +6,7 @@
         li.offers__item.offer
           button.offer__btn(type="button") Tu amigo vale el descuento
           .offer__description 
-            p Tu amigo contratando con nosotros el sitio web ¡Ambos obtienen un 10% de descuento en todos nuestros servicios!
+            p Si tu amigo contrata un sitio web con nosotros ¡Ambos obtienen un 10% de descuento en todos nuestros servicios!
         li.offers__item.offer
           button.offer__btn(type="button") Mantenimiento Gratuito
           .offer__description 
