added videos en/es

--- a/src/components/home/homeEng.pug
+++ b/src/components/home/homeEng.pug
@@ -1,8 +1,8 @@
-.home
+.home#en
   .container 
     .home__box
       .home__greetings 
-        p Think about websites 
+        p Think about websites.
         p Think e-Formaliza
       .home__row       
         .home__column
