--- a/src/components/home/homeEsp.pug
+++ b/src/components/home/homeEsp.pug
@@ -6,7 +6,7 @@
         p Pensaste e-Formaliza
       .home__row       
         .home__column
-          .home__video
+          .home__video.hovered
             .home__play 
               img(src=require("../../../images/youtube-icon.svg"), alt="play")
         .home__column
