debugging and optimization

--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .discount {
-  background-image: url("../../images/fundo_leve1.jpg");
+  background-image: url("../../images/fundo_leve.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: repeat-x;
