--- a/src/components/portfolio/portfolioEng.pug
+++ b/src/components/portfolio/portfolioEng.pug
@@ -7,21 +7,21 @@
       .swiper-wrapper
         //Slides
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados") 
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados") 
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/margarita.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/margarita.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/honda.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/honda.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/iphone.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/iphone.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/evraz.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/evraz.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/ozone.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/ozone.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/quiz.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/quiz.jpg"), alt="projetos realizados")
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.jpg"), data-src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
       //pagination
       .swiper-pagination
     //navigation buttons
