--- a/src/components/footer/footerEng.pug
+++ b/src/components/footer/footerEng.pug
@@ -2,7 +2,7 @@ footer.footer#contacts
   .container 
     p.footer__title.title Contacts
     .footer__row
-      .footer__item
+      a.footer__item(href="https://wa.me/5521999365384")
         img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
         p +55 21-99936-5384
       .footer__item
