blog.html creating/debugging

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -7,7 +7,7 @@ header.header
         a.header__item(href="#home" id="toHome") Home
         a.header__item(href="#creation" id="toCreation") Criamos      
         a.header__item(href="#promotion" id="toPromotion") Promovemos
-        a.header__item(href="index.html") Blog
+        a.header__item(href="blog.html") Blog
         a.header__item(href="index.html") FAQ
         a.header__item(href="#contacts" id="toContacts") Contatos
   nav.header__nav_burger
