--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -10,7 +10,7 @@
         li.offers__item.offer
           button.offer__btn(type="button") Sua Manutenção Gratis
           .offer__description 
-            p Contrate nossos serviços de desenvolvimento até o dia 31 de maio e ganhe 06 meses de manutenção gratis !
+            p Contrate nossos serviços de desenvolvimento até o dia 31 de julho e ganhe 06 meses de manutenção gratis !
         li.offers__item.offer
           button.offer__btn(type="button") Cadastro Google
           .offer__description 
