--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -10,6 +10,13 @@ body.lock {
   overflow: hidden;
 }
 
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
 .container {
   max-width: 1300px;
   margin: 0 auto;
