--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 //components styles
 @use "./generic";
 @use "../components/header/header";
+@use "../components/headerBlog/headerBlog";
 @use "../components/home/home";
 @use "../components/ask/ask";
 @use "../components/discount/discount";
@@ -12,6 +13,7 @@
 @use "../components/footer/footer";
 @use "../components/promotion/promotion";
 @use "../components/creation/creation";
+@use "../components/blogSection/blogSection";
 
 //import fonts and variables
 @import "fonts";
