--- a/src/blog.pug
+++ b/src/blog.pug
@@ -4,20 +4,14 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    //- meta(name="description" content="Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others." )
-    //- meta(name="keywords" content="warehouse, save, data, security, storage, area" )
-    //- link(rel="icon" href="favicon.ico" type="image/x-icon")
+    meta(name="description" content="Criação de web sites profissionais" )
+    meta(name="keywords" content="criacão, sites, web, page, pagina, emprendedor, empresa, advogados, guarulhos, osasco, salvador, goiania, joinville, curitiba, fortaleza, campinas, sp, porto alegre, df, brasilia, curitiba, bh, criacao")
+    script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
     title Nosso Blog
-  body
-    include components/header/header
-    //- include components/home/home
-    //- include components/ask/ask
-    //- include components/discount/discount
+  body.preload#home(style="visibility: hidden;")
+    include components/headerBlog/headerBlog
+    include components/blogSection/blogSection
     include components/footer/footer
-    //- include components/product/product
-    //- include components/services/services 
-    //- include components/obras/obras 
-    //- include components/opinions/opinions 
-    //- include components/goal/goal
+
    
     
