--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
     title e-Formaliza
-  body#home(style="visibility: hidden;")
+  body.preload#home(style="visibility: hidden;")
     include components/langToggle/langToggle
     include components/header/header
     include components/home/home
