--- a/src/components/blogSection/blogSection.scss
+++ b/src/components/blogSection/blogSection.scss
@@ -13,7 +13,6 @@
 }
 
 .post {
-  border: 1px solid white;
   margin-bottom: 50px;
 
   &__title {
@@ -26,7 +25,6 @@
    
     max-width: 550px;
     height: 300px;
-    border: 1px solid cyan;
     border-radius: 15px;
     overflow: hidden;
     background-color: rgba(128, 128, 128, 0.527);
@@ -36,6 +34,16 @@
       width: 100%;
       height: 100%;
     }
+  }
+
+  &__text {
+    max-width: 1100px;
+    margin: 0 auto;
+    text-align: justify;
+    text-indent: 50px;
+    font-size: 1.4em;
+    line-height: 1.4em;
+    padding: 10px 20px 30px;
   }
 }
 
