--- a/src/components/headerBlog/headerBlog.pug
+++ b/src/components/headerBlog/headerBlog.pug
@@ -3,7 +3,7 @@ header.headerBlog
     a(href="./index.html")   
       img.headerBlog__logo.logo(src=require("../../../images/logo_principal.svg"), alt="eformaliza")
     .headerBlog__nav
-      .headerBlog__title Nosso Blog
+      .headerBlog__title e-Formaliza Blog
   //-     .header__list
   //-       a.header__item(href="#home" id="toHome") Home
   //-       a.header__item(href="#creation" id="toCreation") Criamos      
