--- a/src/components/blogSection/blogSection.scss
+++ b/src/components/blogSection/blogSection.scss
@@ -1,11 +1,11 @@
 @import "../../styles/variables";
 
 .blog {
-  
-  background-image: url("../../images/fundo_leve.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: repeat-x;
+  background-color: black;
+  // background-image: url("../../images/fundo_leve.jpg");
+  // background-position: center;
+  // background-size: cover;
+  // background-repeat: repeat-x;
  
   &__box {
     padding: 210px 0 10px;
@@ -28,7 +28,8 @@
     border-radius: 15px;
     overflow: hidden;
     background-color: rgba(128, 128, 128, 0.527);
-    margin: 0 auto 30px;
+    margin: 40px auto 30px;
+    box-shadow: 0 0 5px white;
 
     img {
       width: 100%;
@@ -44,6 +45,18 @@
     font-size: 1.4em;
     line-height: 1.4em;
     padding: 10px 20px 30px;
+
+    h2 {
+      font-weight: 700;
+      font-size: 1.25em;
+      margin: 15px 0;
+      line-height: 1.5em;
+      letter-spacing: 0.06em;
+      text-shadow: 0 0 2px White, 0 0 5px red;
+    }
+    p {
+      margin: 10px 0;
+    }
   }
 }
 
