--- a/src/components/blogSection/blogSection.pug
+++ b/src/components/blogSection/blogSection.pug
@@ -4,18 +4,26 @@
       .blog__post.post
         .post__title
           h2.title Por que investir na criação de sites profissionais?
-        .post__image 
-          img(src=require("../../../images/blog1.jpg"), alt="image__post")
-        .post__text
-          h2 Índice
-          ul 
-            li Em primeiro lugar – Investir na criação de site profissional estimula a confiança do cliente
-            li Seu website funciona como um cartão de visita
-            li Você pode alcançar qualquer pessoa
-            li Trabalha todo o tempo
-            li A competição já tem um site
-            li Resumo
-          h2 As redes sociais, atualmente, parecem dominar a internet. E devido a isso muitos podem até pensar: por que as empresas precisam de sites? Um perfil de empresa nas redes sociais não é suficiente?
+        .post__container
+          .post__image 
+            img(src=require("../../../images/blog1.jpg"), alt="image__post") 
+          .post__indice.post__text
+            h2 Índice
+            ul 
+              li 
+                a#link1(href="#item1") 1. Investimento na criação de site profissional
+              li 
+                a#link2(href="#item2") 2. Seu website funciona como um cartão de visita
+              li 
+                a#link3(href="#item3") 3. Você pode alcançar qualquer pessoa
+              li 
+                a#link4(href="#item4") 4. Trabalha todo o tempo
+              li 
+                a#link5(href="#item5") 5. A competição já tem um site
+              li 
+                a#resumo(href="#resumo") Resumo 
+        .post__text 
+          p As redes sociais, atualmente, parecem dominar a internet. E devido a isso muitos podem até pensar: por que as empresas precisam de sites? Um perfil de empresa nas redes sociais não é suficiente?
           p Infelizmente, não. O site é definitivamente relevante e bastante necessário.
           h2 Então a pergunta é: "Por que é necessário ter um site?"
           p De acordo com pesquisas pré-pandemia, 70-80% dos clientes verificam a veracidade das informações da empresa na Internet antes de tomar uma decisão de compra. Essa verificação ocorre no site - as pessoas estão procurando o que determinada empresa tem a oferecer, onde está localizada, qual é o seu histórico, etc.
@@ -24,17 +32,19 @@
           h2 Um site é hoje uma obrigação para todas as pessoas ou empresas que administram ou iniciam seu próprio negócio.
           p Tendo o seu próprio site, você construirá a sua imagem e, acima de tudo, criará confiança nos potenciais clientes. Você também reduzirá o número de consultas pessoais para informações básicas, e graças a isso economiza tempo que pode ser usado para outras atividades.
           p Aqui estão as cinco principais razões pelas quais você deve ter um site: 
-          ol 
-            li 
-              h2 Investir na criação de site profissional estimula a confiança do cliente
+          ul 
+            li#anchor1
+              div#item1
+              h2 1. Investir na criação de site profissional estimula a confiança do cliente
               p Tendo seu próprio site, seus futuros clientes o vêem como uma empresa profissional, aumentando a confiança e a vontade de comprar de você.
               p Hoje em dia, com grande concorrência em quase todos os setores, a imagem e a credibilidade desempenham um papel importantíssimo. Se pudermos verificar a oferta da empresa, detalhes de contato, ver fotos dos produtos e ou serviços, ler opiniões - a confiança cresce significativamente e a chance de venda também.
-            li 
-              h2 Seu website funciona como um cartão de visita
+            li#anchor2
+              div#item2
+              h2 2. Seu website funciona como um cartão de visita
               p Este cartão de visita permite ao cliente acessar sua empresa a qualquer momento. A utilização de conteúdos interessantes, e mensagens adequadas vai moldar a forma como você é visto pelos seus potenciais clientes.
               p Por isso, a busca por empresas capacitadas e profissionais é de extrema importância para criação de seu website.
               p Quantas vezes você recebeu um telefonema ou um e-mail ou uma mensagem de texto para obter informações básicas sobre a empresa?
-              ul
+              ul#ul
                 li Qual é o seu horário de funcionamento?
                 li O que exatamente você faz? 
                 li Como é o produto X ?
@@ -43,38 +53,29 @@
               p Em função disso é tão importante ter um site completo com todas as informações mais importantes sobre sua empresa, serviços e produtos disponíveis para seu cliente no site.
               h2 Você sabia que aproximadamente 10 segundos são necessários para causar uma impressão específica nos visitantes do seu site, incentivá-los a permanecer ou contatá-los e ganhar sua confiança?
               p Lembre-se, no entanto, que um site não profissional pode sair pela culatra para o seu negócio.
-            li 
-              h2 Você pode alcançar qualquer pessoa
+            li#anchor3
+              div#item3 
+              h2 3. Você pode alcançar qualquer pessoa
               p Alcance ilimitado - você pode alcançar clientes em potencial em uma área muito maior do que a cidade onde a empresa está localizada ou nas imediações.
-            li 
-              h2 Trabalha todo o tempo 
+            li#anchor4 
+              div#item4
+              h2 4. Trabalha todo o tempo 
               p Neste ponto, você e seus funcionários trabalham em horários específicos. O site não. Ele está disponível o tempo todo - funciona 24 horas por dia, 7 dias por semana. 
-            li 
-              h2 A competição já tem um site
+            li#anchor5
+              div#item5 
+              h2 5. A competição já tem um site
               p Você sabe quem não pergunta: "Preciso de um site para o meu negócio?" Seus concorrentes e você sabe porque ? Porque eles já têm e estão se posicionando online.
               p Se você quer se manter competitivo, precisa de um site. Sua concorrência é uma das razões mais importantes para ter um.
               p Sem um site, os clientes interessados, ao pesquisarem um produto ou serviço online, encontrarão e visitarão a página da  empresa de um concorrente e não a sua.
               p Assim, você perde oportunidades de atrair novos clientes para o seu negócio.
           h2 Se você NÃO quer se manter abaixo dos seus concorrentes, precisa investir na construção de um site para a sua empresa. Isso ajudará você a aparecer na web entre muitas outras empresas e atrair mais clientes em potencial para você.
-          h2 Resumo
+          h2#anchorResumo Resumo
+            div#resumo
           p Existem quase um bilhão de sites no mundo e seu número está em constante crescimento. A cada dia, mais empresas montam seus sites, outras mudam para sites mais novos com tendências inovadoras.
           p O mercado está em constante evolução, por isso a pergunta "Vale a pena ter um site?" tem apenas única resposta:
           h2 Ter um site é uma obrigação!
-          h2 Se conseguimos convencê-lo, e acreditamos que sim - entre em contato conosco . Faremos um site profissional para você.
-          p Você ainda não tem um site?
-          p Está na hora de fazê-lo!
+          p Se conseguimos convencê-lo, e acreditamos que sim - entre em contato conosco . Faremos um site profissional para você.
+          h2 Você ainda não tem um site?
+          h2 Está na hora de fazê-lo!
           p Contate-Nos
-
-
-
-
-
-
-
-      //- .blog__post.post
-      //-   .post__title
-      //-     h2.title Titulo de post
-      //-   .post__image 
-      //-     img(src=require("../../../images/youtube-icon.svg"), alt="image__post")
-      //-   .post__text 
-      //-     p Lorem ipsum olo, sit ametdfdf consectetur adipisicing elit. Aspernatur accusantium mollitia officiis aperiam excepturi. Accusamus minima animi magni aperiam error est aut dolore, quia delectus esse voluptate itaque repudiandae voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, voluptate quas soluta cupiditate excepturi earum nobis maxime delectus doloremque itaque! Fugiat corporis libero quasi blanditiis magnam totam accusantium quisquam labore! Lorem ipsum dolor sit amet consectetur adipisicing eli. Quasi odio, nesciunt quae rerum incidunt quis quo aperiam nemo eum vitae enim fugit recusandae. Voluptatem, ipsa sit itaque provident magni doloribus.
+      a.blog__btn.btn#voltar(href="#home") Ao inicio
