--- a/src/components/blogSection/blogSection.scss
+++ b/src/components/blogSection/blogSection.scss
@@ -1,19 +1,25 @@
 @import "../../styles/variables";
 
 .blog {
-  background-color: black;
+  background-color: $colorBlack;
   // background-image: url("../../images/fundo_leve.jpg");
   // background-position: center;
   // background-size: cover;
   // background-repeat: repeat-x;
+  border-bottom: 2px solid white;
+  text-align: center;
  
   &__box {
     padding: 210px 0 10px;
   }
+  &__btn {
+    margin: 0 auto 50px;
+    display: block;
+  }
 }
 
 .post {
-  margin-bottom: 50px;
+  
 
   &__title {
     .title {
@@ -21,24 +27,47 @@
     }
   }
 
-  &__image {
+  &__container {
+    margin: 40px 0 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__indice {
+    flex: 0 1 50%;
    
-    max-width: 550px;
-    height: 300px;
-    border-radius: 15px;
-    overflow: hidden;
-    background-color: rgba(128, 128, 128, 0.527);
-    margin: 40px auto 30px;
-    box-shadow: 0 0 5px white;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 15px;
+    
+
+  }
+
+  &__image {
+    flex: 0 1 50%;
+    max-width: 580px;
+    margin: 0 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    
 
     img {
       width: 100%;
-      height: 100%;
+      height: auto;
+      border-radius: 15px;
+      overflow: hidden;
+      background-color: rgba(128, 128, 128, 0.527);
+      box-shadow: 0 0 5px white;
     }
   }
 
   &__text {
-    max-width: 1100px;
+    max-width: 1250px;
     margin: 0 auto;
     text-align: justify;
     text-indent: 50px;
@@ -52,11 +81,71 @@
       margin: 15px 0;
       line-height: 1.5em;
       letter-spacing: 0.06em;
-      text-shadow: 0 0 2px White, 0 0 5px red;
+      text-shadow: 0 0 1px White, 0 0 5px red;
+     
     }
     p {
       margin: 10px 0;
     }
+
+    a {
+      text-decoration: underline;
+      color: white;
+      line-height: 40px;
+    }
+
+    #anchor1 {
+      position: relative;
+      #item1 {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #anchor2 {
+      position: relative;
+      #item2 {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #anchor3 {
+      position: relative;
+      #item3 {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #anchor4 {
+      position: relative;
+      #item4 {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #anchor5 {
+      position: relative;
+      #item5 {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #anchorResumo {
+      position: relative;
+      #resumo {
+        position: absolute;
+        top: -270px;
+      }
+    }
+    #ul {
+      margin: 30px 0;
+    }
+    #ul li {
+      list-style: circle;
+      list-style-position: inside;
+    }
+   
   }
+
 }
+
 
