--- a/src/components/footer/footerEng.pug
+++ b/src/components/footer/footerEng.pug
@@ -11,9 +11,9 @@ footer.footer#contacts
       a.footer__item(href= "https://www.instagram.com/eformaliza/") 
         img(src=require("../../../images/icons/new-footer-icons/instagram.svg"), alt="instagram")
         p @eformaliza
-      a.footer__item(href="https://facebook.com") 
-        img(src=require("../../../images/icons/new-footer-icons/facebook.svg"), alt="facebook")
-        p facebook
+      //- a.footer__item(href="https://facebook.com") 
+      //-   img(src=require("../../../images/icons/new-footer-icons/facebook.svg"), alt="facebook")
+      //-   p facebook
     .footer__box 
       .footer__unit 
         .footer__dove 
