--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -37,8 +37,8 @@ body.lock {
   font-weight: 700;
   letter-spacing: 0.07em;
   font-size: 2em;
-  border: 1px solid rgb(129, 7, 7);
-  box-shadow: 0 0 5px rgb(129, 7, 7);
+  border: 2px solid rgb(129, 7, 7);
+  box-shadow: 0 0 3px white, 0 0 7px rgb(129, 7, 7);
 }
 
 .btn {
