post anchors debugged

--- a/src/components/blogSection/blogSection.pug
+++ b/src/components/blogSection/blogSection.pug
@@ -21,7 +21,7 @@
               li 
                 a#link5(href="#item5") 5. A competição já tem um site
               li 
-                a#resumo(href="#resumo") Resumo 
+                a#resumoLink(href="#resumo") Resumo 
         .post__text 
           p As redes sociais, atualmente, parecem dominar a internet. E devido a isso muitos podem até pensar: por que as empresas precisam de sites? Um perfil de empresa nas redes sociais não é suficiente?
           p Infelizmente, não. O site é definitivamente relevante e bastante necessário.
@@ -70,7 +70,7 @@
               p Assim, você perde oportunidades de atrair novos clientes para o seu negócio.
           h2 Se você NÃO quer se manter abaixo dos seus concorrentes, precisa investir na construção de um site para a sua empresa. Isso ajudará você a aparecer na web entre muitas outras empresas e atrair mais clientes em potencial para você.
           h2#anchorResumo Resumo
-            div#resumo
+            div#resumo 
           p Existem quase um bilhão de sites no mundo e seu número está em constante crescimento. A cada dia, mais empresas montam seus sites, outras mudam para sites mais novos com tendências inovadoras.
           p O mercado está em constante evolução, por isso a pergunta "Vale a pena ter um site?" tem apenas única resposta:
           h2 Ter um site é uma obrigação!
