--- a/src/components/blogSection/blogSection.pug
+++ b/src/components/blogSection/blogSection.pug
@@ -1,6 +1,52 @@
-.blog 
+.blog
   .container 
     .blog__box 
+      .blog__post.post
+        .post__title
+          h2.title O principal segredo para ter sucesso nos negócios
+        .post__container
+          .post__image 
+            img(src=require("../../../images/blog2.jpg"), alt="image__post") 
+          .post__indice.post__text
+            h2 Índice
+            ul 
+              li 
+                a#link1_2(href="#item1_2") 1. Introdução
+              li 
+                a#link2_2(href="#item2_2") 2. O que afeta a criação da imagem da empresa?
+              li 
+                a#link3_2(href="#item3_2") 3. Moldando a imagem da empresa - Porque é importante?
+              li 
+                a#link4_2(href="#item4_2") 4. Como melhorar a imagem da empresa?
+              li 
+                a#resumoLink_2(href="#resumo2") Resumo 
+        .post__text 
+          h2#anchor1_2 1. Introdução
+            div#item1_2
+          p A liberdade do mercado e as oportunidades que todas as empresas possuem, criam uma situação em que o cliente é e sempre será bastante importante. O sucesso de qualquer empresa depende das suas decisões e preferências de compra.
+          p A estratégia deve estar na mente de todos os empresários que querem excelência de resultados.
+          p Um ponto extremamente importante está relacionado à imagem positiva da empresa. Como a empresa é vista em todas as plataformas onde ela atua.
+          h2#anchor2_2 2. O que afeta a criação da imagem da empresa ?
+            div#item2_2
+          p  A percepção do cliente sobre sua empresa deve ser positiva , profissional e atraente. Isso é um fator determinante de sucesso no mercado moderno e competitivo.
+          p Um dos muitos quesitos a serem considerados para obtenção de uma excelente imagem é ter um website exclusivo e profissional.
+          p Um website traz consigo a ideia de organização e profissionalismo. Retira sua empresa do lugar de amadorismo e te leva a um outro patamar.
+          p Produtos e serviços categorizados, facilidade de compra ou conversa fazem toda a diferença. O cliente quer independência e não receber fotos pelo zap...isso além de consumir tempo do cliente consumirá o tempo também do empresário.
+          p Muitas pessoas buscam online produtos e serviços para comprar. Estar fora deste universo não é o ideal.
+          h2 LEIA TAMBÉM: <a href="#item1">PORQUE VOCÊ DEVE TER UM SITE</a>
+          p Estar presente nas mídias sociais de maneira estruturada também é importante. Num primeiro momento entendemos que construir sozinho seus perfis no Instagram, Facebook, etc é bastante comum e bem aceitável, quando trabalhamos no formato: “eu quipe”. Mas com o passar do tempo e com o crescimento da empresa existe a necessidade de profissionalizar-se.
+          p Escolher no mercado uma empresa que possa criar e gerenciar seus posts, criar sua estratégia de conteúdo é fundamental. Nós da eFormaliza oferecemos o serviço de gerenciamento de mídias sociais, que com certeza atenderá suas necessidades.
+          p Outro ponto importante a ser considerado é a presença no Google .Ter uma ficha no google, atualizada e com comentários relevantes, garante confiabilidade a sua empresa. Mostra que é uma empresa real, com clientes reais e caso de sucesso.
+          h2#anchor3_2 3. Moldando a imagem da empresa – Porque é importante?
+            div#item3_2
+          p Criar a imagem da empresa, se traduz em lucro financeiro. E é necessário considerar quais fatores moldam as preferências dos seus compradores. Entre produtos parecidos,  nem sempre o cliente escolherá o mais barato. Sabemos que um preço competitivo é  importante, mas as decisões de compra também são muito influenciadas pelo seu website, por estratégias publicitárias e criação efetiva da imagem da marca dos serviços e ou produtos e da própria empresa.
+          h2#anchor4_2 4. Como melhorar a imagem da empresa ?
+            div#item4_2
+          p Uma empresa que não tem estratégia bem pensada para criar imagem e identidade, não tem nenhuma chance real de competir com a concorrência que se preocupam com esses elementos. E isso vale também para empresas pequenas e que estão começando. Fugir do amadorismo, por exemplo, através de um website, vai conduzir seu negócio a outro nível. Além disso, a imagem e a identidade da empresa devem ser controladas e eficientemente adaptadas às condições de mudança dinâmica.
+          h2#anchorResumo2 Resumo:
+            div#resumo2
+          p As funções e metas de construção da imagem da empresa apresentadas dessa forma são cada vez mais facilmente verificáveis. A Internet oferece grandes oportunidades para alcançar os clientes, e as escolhas feitas pela empresa, inclusive as de pessoas que promovem produtos nas mídias sociais, são de grande importância e são um fator importante que molda a imagem da empresa.
+      a.blog__btn.btn#voltar2(href="#home") Ao inicio
       .blog__post.post
         .post__title
           h2.title Por que investir na criação de sites profissionais?
