--- a/src/components/ask/askEsp.pug
+++ b/src/components/ask/askEsp.pug
@@ -1,6 +1,6 @@
 .ask#ask
   .container
-    p.ask__title.title SOLICITe UNA consultación SIN COMPROMISO:
+    p(data-aos="fade-in" data-aos-duration="1800").ask__title.title SOLICITe UNA consultación SIN COMPROMISO:
     .ask__box
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
