--- a/src/components/creation/creationEng.pug
+++ b/src/components/creation/creationEng.pug
@@ -1,6 +1,6 @@
 .creation#creation
   .container
-    .creation__title.title Creation
+    div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Creation
     .creation__row  
       .creation__item.item
         .item__img
@@ -14,7 +14,7 @@
         .item__img
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Virtual Business Cards
-    .creation__title.title Related services
+    div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Related services
     .creation__row
       .creation__item.item
         .item__img
