--- a/src/components/creation/creationEsp.pug
+++ b/src/components/creation/creationEsp.pug
@@ -1,6 +1,6 @@
 .creation#creation
   .container
-    .creation__title.title Creamos
+    div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Creamos
     .creation__row  
       .creation__item.item
         .item__img
@@ -14,7 +14,7 @@
         .item__img
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Tarjetas de visita virtuales
-    .creation__title.title Servicios relacionados
+    div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Servicios relacionados
     .creation__row
       .creation__item.item
         .item__img
