--- a/src/components/discount/discountEsp.pug
+++ b/src/components/discount/discountEsp.pug
@@ -1,6 +1,6 @@
 .discount
   .container
-    p.discount__title.title Atención!!!
+    p(data-aos="fade-in" data-aos-duration="1800").discount__title.title Atención!!!
     .discount__image 
       img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
