--- a/src/components/footer/footerEng.pug
+++ b/src/components/footer/footerEng.pug
@@ -1,6 +1,6 @@
 footer.footer#contacts
   .container 
-    p.footer__title.title Contacts
+    p(data-aos="fade-in" data-aos-duration="1800").footer__title.title Contacts
     .footer__row
       a.footer__item(href="https://wa.me/5521999365384")
         img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
