--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -2,8 +2,8 @@
   .container 
     .home__box
       .home__greetings 
-        p Pensou em sites?
-        p Pensou e-Formaliza
+        p(data-aos="fade-in" data-aos-duration="1800") Pensou em sites?
+        p(data-aos="fade-in" data-aos-delay="1800" data-aos-duration="1800") Pensou e-Formaliza
       .home__row       
         .home__column
           .home__video.hovered
